[package]
name = "hello-esp"
version = "0.1.0"
authors = ["Philippe GASSMANN <philoops@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "hello-esp"
harness = false    # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.49", features = [
    "critical-section",
    "embassy-time-driver",
    "embassy-sync",
] }
anyhow = "1"
rgb = "0.8.29"
toml-cfg = "=0.1.3"
sds011-rs = { version = "0.5.0", features = ["sync"] }
embedded-hal = "1"
macaddr = "1"

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30"      # Necessary until a new version of `esp-idf-sys` is released
toml-cfg = "=0.1.3"
